# CrewAI_LLM

sqli_crew/: .gitignore  README.md  payload.md  pyproject.toml  recon.md  requirements.txt  scan.md  test_import.py
sqli_crew/src/sqli_crew/: crew.py  main.py  utils.py
sqli_crew/src/sqli_crew/config/: agents.yaml  tasks.yaml
