[project]
name = "sqli_crew"
version = "0.1.0"
description = "SQLi_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
sqli_crew = "sqli_crew.main:run"
run_crew = "sqli_crew.main:run"
train = "sqli_crew.main:train"
replay = "sqli_crew.main:replay"
test = "sqli_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
